--- a/DiabeticRetinopathy/Refactoring/kobra/dr/notebooks/Segmenting Fundus Images.ipynb
+++ b/DiabeticRetinopathy/Refactoring/kobra/dr/notebooks/Segmenting Fundus Images.ipynb
@@ -16089,7 +16089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So kinda ok but very far from ideal. The \"Drusen\" image shows lots and lots of false positives and the haemorages image includes blood vessels and fovea. I took some steps to resolve these problems, but either there was not enough time or the selected methodology was not suitable for this, I was not very succesful at coming up with good features this way.\n",
+    "So kinda ok but very far from ideal. The \"Drusen\" image shows lots and lots of false positives and the haemorages image includes blood vessels and fovea. I took some steps to resolve these problems (detecting blood vessels, removing bright areas adjacent to the optical disk), but either there was not enough time or the selected methodology was not suitable for this, I was not very succesful at coming up with good features this way.\n",
     "\n",
     "Nevertheless, in the words of my former colleage (a scientist): \"succesful experiment with negative results\"."
    ]
