--- a/DiabeticRetinopathy/Refactoring/kobra/dr/notebooks/Segmenting Fundus Images.ipynb
+++ b/DiabeticRetinopathy/Refactoring/kobra/dr/notebooks/Segmenting Fundus Images.ipynb
@@ -24,7 +24,7 @@
     "- 0 - 1: drusen/exudates \n",
     "- 2 - 3: texture \n",
     "- 4 - 5: Camera effects\n",
-    "- 6 - 7: Outside/black\n",
+    "- 6 - 7: Haemorages/blood vessels\n",
     "- 8 - 9: Optic Disc\n",
     "\n",
     "and did these annotations for 7 images selected at random\n",
