--- a/Notebooks/Publish/Custom Filter Banks with OpenCV.ipynb
+++ b/Notebooks/Publish/Custom Filter Banks with OpenCV.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose in order to extract curved lines from the image, we create a bank of filters (matched filters) designed to illicit a response from line segments of different orientation. To reconstruct the curves we apply each filter in the bank to the given image and then sum the resulting images:\n",
+    "Suppose in order to extract curved lines from the image, we create a bank of filters (matched filters) designed to illicit a response from line segments of different orientation. To reconstruct the curves we apply each filter in the bank to the given image and then return the maximum response:\n",
     "\n",
-    "$$I_{res} = \\sum\\limits_{F_i} I * F_i$$\n",
+    "$$I_{res} = \\max\\limits_{x,y} (I * F_i)$$\n",
     "\n",
     "where \"*\" is a convolution operation, $I$ - original image, $F_i$ - filters in the filter bank."
    ]
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
        "hhNAAIDhBBAAYDgBBAAYTgABAIYTQACA4QQQAGC4/wMxkBrghi39hgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xbfaee80>"
+       "<matplotlib.figure.Figure at 0xa11e550>"
       ]
      },
      "metadata": {},
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -649,7 +649,7 @@
        "Kim12H1aVgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xcc93860>"
+       "<matplotlib.figure.Figure at 0xbcec2e8>"
       ]
      },
      "metadata": {},
@@ -1008,7 +1008,7 @@
        "QgghhBBCRoViBCGEEEIIIYQQQkbl/wNZz2WjifA4mAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11080320>"
+       "<matplotlib.figure.Figure at 0xc28ad68>"
       ]
      },
      "metadata": {},
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1127,7 +1127,7 @@
        "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,6 +1135,23 @@
    "source": [
     "# here are the values for one of these rotated images:\n",
     "bank_gf[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Applying the filter bank\n",
+    "def applyFilters(im, kernels):\n",
+    "    '''\n",
+    "    Given a filter bank, apply them and record maximum response\n",
+    "    '''\n",
+    "    images = np.array([cv2.filter2D(im, -1, k) for k in kernels])\n",
+    "    return np.max(images, 0)"
    ]
   }
  ],
