--- a/Notebooks/Publish/Moving Stats.ipynb
+++ b/Notebooks/Publish/Moving Stats.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Averages & Standard Diviations between Frames\n"
+    "## Averages & Standard Deviations between Frames\n"
    ]
   },
   {
@@ -149,6 +149,7 @@
    "source": [
     "plt.plot(means)\n",
     "plt.ylabel(\"Means\")\n",
+    "plt.xlabel(\"Frame Deltas\")\n",
     "plt.show()"
    ]
   },
@@ -173,6 +174,7 @@
    "source": [
     "plt.plot(stds)\n",
     "plt.ylabel(\"Stds\")\n",
+    "plt.xlabel(\"Frame Deltas\")\n",
     "plt.show()"
    ]
   }
